fixed search on IPhone

--- a/css/style.css
+++ b/css/style.css
@@ -429,6 +429,9 @@ body.lock::after {
   max-width: 460px;
   width: 100%;
   display: flex;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  overflow: hidden;
   justify-content: center;
   margin: 0 auto;
 }
@@ -448,23 +451,24 @@ body.lock::after {
   background-color: #f3f3f3;
   outline: none;
   border: 1px solid transparent;
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
   transition: border-color 0.2s ease-in, box-shadow 0.2s ease-in;
 }
 .search__input::placeholder {
   transition: color 0.2s ease-in;
 }
 @media only screen and (min-width: 767.98px) {
+  .search__input:focus {
+    box-shadow: inset 0 0 5px #87d035;
+    border-color: #87d035;
+  }
+  .search__input:focus::placeholder {
+    color: #454544;
+  }
   .search__input:hover {
-    box-shadow: inset 0 0 5px #484846;
     border-color: #87d035;
   }
   .search__input:hover::placeholder {
-    color: #454544;
-  }
-  .search__input:focus {
-    border-color: #87d035;
+    color: #87d035;
   }
 }
 .search__button {
@@ -473,9 +477,6 @@ body.lock::after {
   display: block;
   max-width: 45px;
   min-height: 37px;
-  border: 1px solid #87d035;
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
   padding: 0 12px;
   font-weight: 700;
   color: #f3f3f3;
